adicionando creditos do ensino

--- a/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/exemplos_de_efeitos_css.html
+++ b/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/exemplos_de_efeitos_css.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Exemplos de estilo CSS</h1>
+
+        <h2>Propriedade Padding</h2>
+
         <p style=" padding: 10px 5px; border: 2px solid; background-color: rgb(201, 201, 243);">
             Esse paragrafo tem os valores de padding definidos com edição no eixo y (topo e base) e x (direita esquerda).
         </p>
@@ -29,6 +32,8 @@
         <p style="padding-left: 200px; border: 2px solid; background-color: rgb(219, 219, 219);">
             Paragrafo com valor do padding da esquerda modificado
         </p>
+
+        <h2>Propriedade Border</h2>
 
         <p style="border-top: 10px solid blue; border-right: 10px dotted green; border-bottom: 10px dashed red; border-left: 10px double ; font-size: 40px; padding-left:  10px; padding-right: 0;">
             Esse paragrafo tem suas bordas editadas e um pequeno valor de padding para não ficar colado na borda esquerda.
@@ -74,7 +79,7 @@
         <p style="border-radius: 10% 20% 30% 40%; border-style: double;">
             Esse paragrafo tem cada lado do elemento editado separadamente pelo border-radius.
         </p>
-
         
+        <h2>Estilo de texto</h2>
     </body>
 </html>
