--- a/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/exemplos_de_efeitos_css.html
+++ b/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/exemplos_de_efeitos_css.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <h1>Exemplos de estilo CSS</h1>
+        <h2>Estilo de elementos</h2>
 
-        <h2>Propriedade Padding</h2>
+        <h3>Propriedade Padding</h3>
 
         <p style=" padding: 10px 5px; border: 2px solid; background-color: rgb(201, 201, 243);">
             Esse paragrafo tem os valores de padding definidos com edição no eixo y (topo e base) e x (direita esquerda).
@@ -33,7 +34,7 @@
             Paragrafo com valor do padding da esquerda modificado
         </p>
 
-        <h2>Propriedade Border</h2>
+        <h3>Propriedade Border</h3>
 
         <p style="border-top: 10px solid blue; border-right: 10px dotted green; border-bottom: 10px dashed red; border-left: 10px double ; font-size: 40px; padding-left:  10px; padding-right: 0;">
             Esse paragrafo tem suas bordas editadas e um pequeno valor de padding para não ficar colado na borda esquerda.
@@ -81,5 +82,78 @@
         </p>
         
         <h2>Estilo de texto</h2>
+        
+        <h3>Propriedade Font-family</h3>
+
+        <p>
+            Esse paragrafo está com font-family padrão (inspecionei no navegador e apareceu a times new romans).
+        </p>
+
+        <p style="font-family: courier new;">
+            Esse paragrafo está com a font-family courier new.
+        </p>
+
+        <h3>Propriedade Font-size</h3>
+
+        <p style="font-size: 36px;">
+            Está fonte está com sua font-size em 36px
+        </p>
+
+        <h3>Propriedade Font-style</h3>
+
+        <p>
+            Paragrafo sem font style configurada
+        </p>
+
+        <p style="font-style: italic;">
+            Paragrafo com font-style configurada para italic
+        </p>
+
+        <h3>Propriedade Font-Weight</h3>
+
+        <p>
+            Paragrafo sem font-weigth
+        </p>
+
+        <p style="font-weight: bold;">
+            Paragrafo com font-weight bold
+        </p>
+
+        <h3>Propriedade Text-transform</h3>
+
+        <p>
+            Paragrafo sem text-transform
+        </p>
+
+        <p style="text-transform: lowercase">
+            Paragrafo com text-transform no valor lowercase
+        </p>
+
+        <p style="text-transform: uppercase">
+            Paragrafo com text-transform no valor uppercase
+        </p>
+
+        <p style="text-transform: capitalize">
+            Paragrafo com text-transform no valor capitalize
+        </p>
+
+        <h3>Propriedade Text-decoration</h3>
+
+        <p>
+            Paragrafo sem propriedade text-decoration
+        </p>
+
+        <p style="text-decoration: underline;">
+            Paragrafo com text-decoration underline
+        </p>
+
+        <p style="text-decoration: line-through;">
+            Paragrafo com text-decoration line-through
+        </p>
+
+        <p style="text-decoration: overline;">
+            Paragrafo com text-decoration overline
+        </p>
+
     </body>
 </html>
