--- a/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/exercicio-pratico2.html
+++ b/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/exercicio-pratico2.html
@@ -29,7 +29,7 @@
             </section>
             <footer>
                 <p>Para pessoas que a ordem não importa tanto!</p>
-                <ul>
+                <ul class="contacts_list">
                     
                     <li><a href="mailto:felipe_ddn_@hotmail.com">felipe_ddn_@hotmail.com</a></li>
                     <li><a href="https://www.linkedin.com/in/felipe-nascimento-1ba42bb2" target="_blank">LinkedIn</a></li>
