aula e exercicios dimensao e certificado do curso

--- a/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/exemplos_de_efeitos_css.html
+++ b/_introducao_a_criacao_de_websites_com_html5_e_css3/_estilizando_elementos_textos_e_listas/exemplos_de_efeitos_css.html
@@ -155,5 +155,20 @@
             Paragrafo com text-decoration overline
         </p>
 
+        <ul style="list-style-type: square;">
+            <li>Essa é uma lista não ordenada</li>
+            <li>A ordem não importa tanto</li>
+            <li>seu estilo esta definido como square</li>
+        </ul>
+
+        <ol style="list-style-type:upper-roman ;">
+            <li>Essa é uma lista ordenada</li>
+            <li>A ordem importa</li>
+            <li>seu estilo está definido como upper-romam</li>
+        </ol>
+
+        <ul style="list-style-type: '\1f44d' ;">
+            <li>Podemos usar um emoji como marcador de uma lista</li>
+        </ul>
     </body>
 </html>
