aula array + dicionario, condicional, laco e date

--- a/_programacao_para_internet_com_javascript/_introducao_ao_javascript/index.html
+++ b/_programacao_para_internet_com_javascript/_introducao_ao_javascript/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha página</title>
-    <script type="text/javascript" src="./main.js"></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Minha página</title>
+        <script type="text/javascript" src="./main.js"></script>
+    </head>
 
-<body>
-    <h1>Minha página</h1>
-
-</body>
+    <body>
+        <h1>Minha página</h1>
+        <h2>Acesse o console para visualizar os comandos JavaScript (ctrl + shift + I)</h2>
+    </body>
 
 </html>
